--- a/Happy Bunny/Storyboards/Base.lproj/Main.storyboard
+++ b/Happy Bunny/Storyboards/Base.lproj/Main.storyboard
@@ -76,6 +76,7 @@
                     <connections>
                         <outlet property="bunnyCurrentCollectionView" destination="MtT-Ka-L9U" id="wdA-Hx-c4D"/>
                         <outlet property="bunnyListCollectionView" destination="TZu-eq-kde" id="RMI-gM-phq"/>
+                        <outlet property="mainView" destination="8bC-Xf-vdC" id="DUC-qp-E50"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
